gadjid/src/snapshots/gadjid__test__DAG1-vs-DAG2.snap
---
source: src/lib.rs
expression: "test(\"10001.DAG-100\", \"10002.DAG-100\")"
---
g_guess: 10002.DAG-100
g_true: 10001.DAG-100
t: 7
y: 77
z:
  - 3
pa_true_T:
  - 3
an_true_T:
  - 0
  - 3
  - 7
ch_true_T:
  - 15
  - 16
  - 23
  - 34
  - 39
  - 49
  - 61
  - 65
  - 66
  - 68
  - 72
  - 73
  - 74
  - 75
  - 76
  - 80
  - 81
de_true_T:
  - 7
  - 15
  - 16
  - 17
  - 19
  - 20
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
poss_de_true_T:
  - 7
  - 15
  - 16
  - 17
  - 19
  - 20
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
prop_an_true_Y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 61
  - 62
  - 63
  - 65
  - 67
  - 68
  - 69
  - 70
  - 72
  - 74
  - 77
nam: []
nva:
  - 3
shd:
  - 0.006464646464646465
  - 32
sid:
  - 0.04080808080808081
  - 404
oset_aid:
  - 0.023636363636363636
  - 234
parent_aid:
  - 0.04080808080808081
  - 404
ancestor_aid:
  - 0
  - 0
