gadjid/src/snapshots/gadjid__test__DAG3-vs-DAG4.snap
---
source: src/lib.rs
expression: "test(\"10003.DAG-100\", \"10004.DAG-100\")"
---
g_guess: 10004.DAG-100
g_true: 10003.DAG-100
t: 99
y: 85
z:
  - 3
  - 20
  - 21
  - 24
  - 25
  - 27
  - 49
  - 57
  - 59
  - 65
  - 68
  - 69
  - 72
  - 93
  - 95
pa_true_T:
  - 32
  - 29
  - 61
  - 76
  - 88
  - 66
  - 63
  - 25
  - 57
  - 19
  - 33
  - 65
  - 24
  - 53
  - 82
  - 79
  - 12
  - 41
  - 73
  - 67
pa_true_Y:
  - 32
  - 29
  - 20
  - 49
  - 46
  - 72
  - 66
  - 22
  - 42
  - 65
  - 21
  - 82
  - 47
  - 12
  - 73
  - 35
de_true_Z:
  - 61
  - 55
  - 49
  - 43
  - 37
  - 98
  - 31
  - 92
  - 25
  - 86
  - 19
  - 80
  - 13
  - 74
  - 7
  - 68
  - 62
  - 56
  - 50
  - 44
  - 38
  - 99
  - 32
  - 93
  - 26
  - 87
  - 20
  - 81
  - 75
  - 69
  - 63
  - 57
  - 51
  - 45
  - 39
  - 33
  - 94
  - 27
  - 88
  - 21
  - 82
  - 15
  - 76
  - 70
  - 3
  - 64
  - 58
  - 52
  - 46
  - 40
  - 34
  - 95
  - 28
  - 89
  - 22
  - 83
  - 16
  - 77
  - 71
  - 65
  - 59
  - 53
  - 47
  - 41
  - 35
  - 96
  - 29
  - 90
  - 23
  - 84
  - 17
  - 78
  - 11
  - 72
  - 5
  - 66
  - 60
  - 54
  - 48
  - 42
  - 36
  - 97
  - 30
  - 91
  - 24
  - 85
  - 18
  - 79
  - 73
  - 6
  - 67
de_guess_Z:
  - 61
  - 55
  - 49
  - 43
  - 37
  - 98
  - 31
  - 92
  - 25
  - 86
  - 19
  - 80
  - 74
  - 68
  - 62
  - 56
  - 50
  - 44
  - 38
  - 99
  - 32
  - 93
  - 26
  - 87
  - 20
  - 81
  - 75
  - 69
  - 63
  - 57
  - 51
  - 45
  - 39
  - 33
  - 94
  - 27
  - 88
  - 21
  - 82
  - 76
  - 70
  - 3
  - 64
  - 58
  - 52
  - 46
  - 40
  - 34
  - 95
  - 28
  - 89
  - 22
  - 83
  - 77
  - 71
  - 65
  - 59
  - 53
  - 47
  - 41
  - 35
  - 96
  - 29
  - 90
  - 84
  - 78
  - 72
  - 66
  - 60
  - 54
  - 48
  - 42
  - 36
  - 97
  - 30
  - 91
  - 24
  - 85
  - 18
  - 79
  - 73
  - 67
nam: []
nva:
  - 0
  - 61
  - 55
  - 49
  - 43
  - 37
  - 98
  - 31
  - 92
  - 25
  - 86
  - 19
  - 80
  - 13
  - 74
  - 7
  - 68
  - 1
  - 62
  - 56
  - 50
  - 44
  - 38
  - 32
  - 93
  - 26
  - 87
  - 20
  - 81
  - 14
  - 75
  - 8
  - 69
  - 2
  - 63
  - 57
  - 51
  - 45
  - 39
  - 33
  - 94
  - 27
  - 88
  - 21
  - 82
  - 15
  - 76
  - 9
  - 70
  - 3
  - 64
  - 58
  - 52
  - 46
  - 40
  - 34
  - 95
  - 28
  - 89
  - 22
  - 83
  - 16
  - 77
  - 10
  - 71
  - 4
  - 65
  - 59
  - 53
  - 47
  - 41
  - 35
  - 96
  - 29
  - 90
  - 23
  - 84
  - 17
  - 78
  - 11
  - 72
  - 5
  - 66
  - 60
  - 54
  - 48
  - 42
  - 36
  - 97
  - 30
  - 91
  - 24
  - 85
  - 18
  - 79
  - 12
  - 73
  - 6
  - 67
shd:
  - 0.3208080808080808
  - 1588
sid:
  - 0.8334343434343434
  - 8251
oset_aid:
  - 0.40060606060606063
  - 3966
parent_aid:
  - 0.8334343434343434
  - 8251
ancestor_aid:
  - 0.3331313131313131
  - 3298
