gadjid/src/snapshots/gadjid__test__DAG5-vs-DAG6.snap
---
source: src/lib.rs
expression: "test(\"10005.DAG-100\", \"10006.DAG-100\")"
---
g_guess: 10006.DAG-100
g_true: 10005.DAG-100
t: 92
y: 53
z:
  - 2
  - 4
  - 5
  - 14
  - 25
  - 26
  - 28
  - 29
  - 30
  - 31
  - 34
  - 36
  - 44
  - 45
  - 53
  - 60
  - 69
  - 70
  - 74
  - 76
  - 87
pa_true_T:
  - 2
  - 4
  - 5
  - 14
  - 25
  - 26
  - 28
  - 29
  - 30
  - 31
  - 34
  - 44
  - 45
  - 53
  - 60
  - 69
  - 70
  - 74
  - 76
  - 87
an_true_T:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 87
  - 92
ch_true_T:
  - 97
de_true_T:
  - 92
  - 97
poss_de_true_T:
  - 92
  - 97
prop_an_true_Y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 33
  - 34
  - 35
  - 37
  - 38
  - 40
  - 41
  - 42
  - 45
  - 46
  - 53
nam: []
nva:
  - 2
  - 4
  - 5
  - 14
  - 25
  - 26
  - 28
  - 29
  - 30
  - 31
  - 34
  - 36
  - 44
  - 45
  - 53
  - 60
  - 69
  - 70
  - 74
  - 76
  - 87
shd:
  - 0.006262626262626263
  - 31
sid:
  - 0.01686868686868687
  - 167
oset_aid:
  - 0.0017171717171717172
  - 17
parent_aid:
  - 0.01686868686868687
  - 167
ancestor_aid:
  - 0
  - 0
