gadjid/src/snapshots/gadjid__test__DAG9-vs-DAG10.snap
---
source: src/lib.rs
expression: "test(\"10009.DAG-100\", \"10010.DAG-100\")"
---
g_guess: 10010.DAG-100
g_true: 10009.DAG-100
t: 34
y: 18
z:
  - 0
  - 2
  - 4
  - 7
  - 8
  - 9
  - 11
  - 12
  - 13
  - 14
  - 16
  - 17
  - 18
  - 19
  - 21
  - 26
  - 29
  - 30
  - 31
  - 32
pa_true_T:
  - 0
  - 1
  - 4
  - 6
  - 12
  - 13
  - 15
  - 16
  - 19
  - 23
  - 24
  - 25
  - 26
  - 30
  - 33
an_true_T:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 32
  - 33
  - 34
ch_true_T:
  - 37
  - 41
  - 43
  - 45
  - 47
  - 49
  - 53
  - 56
  - 58
  - 60
  - 67
  - 69
  - 70
  - 72
  - 73
  - 75
  - 82
  - 84
  - 85
  - 88
  - 93
  - 95
de_true_T:
  - 34
  - 37
  - 38
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
poss_de_true_T:
  - 34
  - 37
  - 38
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
prop_an_true_Y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 17
  - 18
nam: []
nva:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
shd:
  - 0.4951515151515152
  - 2451
sid:
  - 0.7182828282828283
  - 7111
oset_aid:
  - 0.3409090909090909
  - 3375
parent_aid:
  - 0.7182828282828283
  - 7111
ancestor_aid:
  - 0.26171717171717174
  - 2591
