gadjid/src/snapshots/gadjid__test__big-CPDAG1-vs-CPDAG2.snap
---
source: src/lib.rs
expression: "test(&format!(\"100{:0>2}.CPDAG-100\", true_id),\n    &format!(\"100{:0>2}.CPDAG-100\", guess_id))"
---
g_true: 10001.CPDAG-100
g_guess: 10002.CPDAG-100
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.023636363636363636
  - 234
parent_aid:
  - 0.04080808080808081
  - 404
shd:
  - 0.006464646464646465
  - 32
T:
  - 1
  - 2
  - 5
  - 6
  - 7
  - 9
  - 11
  - 12
  - 13
  - 14
  - 16
  - 19
  - 20
  - 21
  - 23
  - 25
  - 26
  - 27
  - 28
  - 29
  - 36
  - 37
  - 38
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 49
  - 53
  - 54
  - 55
  - 58
  - 61
  - 62
  - 64
  - 69
  - 71
  - 73
  - 74
  - 75
  - 79
  - 80
  - 81
  - 84
  - 85
  - 86
  - 88
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 98
  - 99
NAM:
  - 0
  - 3
  - 10
  - 15
  - 17
  - 18
  - 22
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
Y: 56
random_adj:
  - 8
  - 18
  - 24
  - 31
  - 63
  - 65
  - 67
  - 72
  - 77
  - 82
  - 87
proper_ancestors:
  - 0
  - 3
  - 4
  - 10
  - 18
  - 56
oset:
  - 0
  - 2
  - 3
  - 4
  - 9
possible_descendants:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
parent_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
ancestor_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
nondescendant_adjustment_NVA:
  - 0
  - 3
  - 4
  - 8
  - 10
  - 15
  - 17
  - 18
  - 22
  - 24
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
oset_adjustment_NVA:
  - 0
  - 2
  - 3
  - 4
  - 8
  - 9
  - 10
  - 15
  - 17
  - 18
  - 22
  - 24
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
empty_adjustment_NVA:
  - 0
  - 3
  - 4
  - 8
  - 10
  - 15
  - 17
  - 18
  - 22
  - 24
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
random_Z_adjustment_NVA:
  - 0
  - 3
  - 4
  - 8
  - 10
  - 15
  - 17
  - 18
  - 22
  - 24
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 39
  - 47
  - 48
  - 50
  - 51
  - 52
  - 56
  - 57
  - 59
  - 60
  - 63
  - 65
  - 66
  - 67
  - 68
  - 70
  - 72
  - 76
  - 77
  - 78
  - 82
  - 83
  - 87
  - 89
  - 90
  - 97
