gadjid/src/snapshots/gadjid__test__big-CPDAG2-vs-CPDAG3.snap
---
source: src/lib.rs
expression: "test(&format!(\"100{:0>2}.CPDAG-100\", true_id),\n    &format!(\"100{:0>2}.CPDAG-100\", guess_id))"
---
g_true: 10002.CPDAG-100
g_guess: 10003.CPDAG-100
ancestor_aid:
  - 0.016464646464646463
  - 163
oset_aid:
  - 0.03464646464646465
  - 343
parent_aid:
  - 0.07909090909090909
  - 783
shd:
  - 0.006262626262626263
  - 31
T:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 9
  - 10
  - 12
  - 13
  - 14
  - 16
  - 18
  - 21
  - 22
  - 23
  - 27
  - 28
  - 29
  - 30
  - 32
  - 33
  - 35
  - 36
  - 40
  - 41
  - 42
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 59
  - 60
  - 62
  - 66
  - 68
  - 75
  - 77
  - 78
  - 79
  - 80
  - 82
  - 83
  - 84
  - 87
  - 88
  - 89
  - 90
  - 92
  - 94
  - 96
  - 97
  - 98
  - 99
NAM:
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
Y: 52
random_adj:
  - 8
  - 11
  - 20
  - 25
  - 34
  - 37
  - 67
  - 71
  - 73
  - 86
  - 91
  - 95
proper_ancestors:
  - 52
oset:
  - 4
possible_descendants:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
parent_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
ancestor_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
nondescendant_adjustment_NVA:
  - 2
  - 6
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 24
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
oset_adjustment_NVA:
  - 2
  - 4
  - 6
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 24
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
empty_adjustment_NVA:
  - 2
  - 6
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 24
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
random_Z_adjustment_NVA:
  - 2
  - 6
  - 7
  - 8
  - 11
  - 15
  - 17
  - 19
  - 20
  - 24
  - 25
  - 26
  - 31
  - 34
  - 37
  - 38
  - 39
  - 43
  - 44
  - 45
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 61
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 76
  - 81
  - 85
  - 86
  - 91
  - 93
  - 95
