gadjid/src/snapshots/gadjid__test__big-CPDAG3-vs-CPDAG4.snap
---
source: src/lib.rs
expression: "test(&format!(\"100{:0>2}.CPDAG-100\", true_id),\n    &format!(\"100{:0>2}.CPDAG-100\", guess_id))"
---
g_true: 10003.CPDAG-100
g_guess: 10004.CPDAG-100
ancestor_aid:
  - 0.3486868686868687
  - 3452
oset_aid:
  - 0.38707070707070707
  - 3832
parent_aid:
  - 0.8469696969696969
  - 8385
shd:
  - 0.3208080808080808
  - 1588
T:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 8
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 19
  - 20
  - 21
  - 22
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 36
  - 37
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 47
  - 48
  - 49
  - 50
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 73
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 86
  - 87
  - 88
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
NAM:
  - 0
  - 18
  - 25
  - 38
  - 46
  - 51
  - 72
  - 83
  - 89
  - 90
  - 99
Y: 7
random_adj:
  - 9
  - 17
  - 23
  - 46
proper_ancestors:
  - 7
oset: []
possible_descendants:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
parent_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 92
  - 96
  - 99
ancestor_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 92
  - 96
  - 99
nondescendant_adjustment_NVA:
  - 0
  - 7
  - 9
  - 17
  - 18
  - 23
  - 25
  - 35
  - 38
  - 46
  - 51
  - 72
  - 74
  - 83
  - 89
  - 90
  - 99
oset_adjustment_NVA:
  - 0
  - 7
  - 9
  - 17
  - 18
  - 23
  - 25
  - 35
  - 38
  - 46
  - 51
  - 72
  - 74
  - 83
  - 89
  - 90
  - 99
empty_adjustment_NVA:
  - 0
  - 7
  - 9
  - 17
  - 18
  - 23
  - 25
  - 35
  - 38
  - 46
  - 51
  - 72
  - 74
  - 83
  - 89
  - 90
  - 99
random_Z_adjustment_NVA:
  - 0
  - 7
  - 9
  - 17
  - 18
  - 23
  - 25
  - 35
  - 38
  - 46
  - 51
  - 72
  - 74
  - 83
  - 89
  - 90
  - 99
